--- a/platform/dashboard.html
+++ b/platform/dashboard.html
@@ -63,41 +63,5 @@
     </div>
 </div>
 <script>
-    $(document).ready(function(){
-        $(".mainnav li").removeClass("active");
-        $(".mainnav a[href='#dashboard']").parent().addClass("active");
-        $(".loading-text").addClass("hide");
-        function ajaxGetCall(url, errorCallback, successCallback){
-            $.ajax({
-                url: url,
-                async: false,
-                type: 'get',
-                beforeSend: function (xhr) {
-                    xhr.setRequestHeader('Authorization', currentUser.token_type +' '+ currentUser.access_token);
-                },
-                data: {},
-                dataType: 'json',
-                cache: false,
-                error: errorCallback,
-                success: successCallback
-            });
-        }
-        var currentUser = JSON.parse(localStorage.getItem("currentUser"));
-        ajaxGetCall('https://api.backand.com/1/query/data/getAllReferOffers?parameters=%7B%22pageSize%22:%225%22,%22startFrom%22:%220%22,%22cityParam%22:%22%22,%22keyword%22:%22%22%7D', function(error){alert(JSON.stringify(error))}, function(data){myRecords = data});
-        if(myRecords.length == 0){
-            $("#allOffers").append("<div class='span12'><div class='widget'><div class='widget-content' style='padding:20px 15px 20px 15px'><p style='text-align: center; font-style: italic; font-size:20px;'>There are no offers here :(</p></div></div></div>")
-            $(".filters").hide();
-        }
-        for(var i in myRecords){
-            var date = new Date(myRecords[i].dateCreated);
-            var corrDate = new Date(new Date(date).setHours(date.getHours+2));
-            var offerUrl = '/platform/index.html#offer-page:'+myRecords[i].id;
-            if(!myRecords[i].procent)
-                var procentTag = "<td><a href='"+offerUrl+"'>-</a></td>";
-            else
-                var procentTag = "<td><b><a href='"+offerUrl+"'>"+myRecords[i].procent+" Ron</a></b></td>";
-            
-            $(".latest-offers tbody").append("<tr><td class='hide-td-smaller'><a href='"+offerUrl+"'><i class='icon-time'></i>&nbsp;"+$.timeago(date)+"</a></td><td><a href='"+offerUrl+"'>"+myRecords[i].title+"</a></td><td class='hide-td'><a href='"+offerUrl+"'>"+myRecords[i].jobType+"</a></td>"+procentTag+"<td><a href='"+offerUrl+"'><i class='icon-chevron-right'></i></a></td></tr>")
-        }
-    });
+ var _0x266e=["\x61\x63\x74\x69\x76\x65","\x72\x65\x6D\x6F\x76\x65\x43\x6C\x61\x73\x73","\x2E\x6D\x61\x69\x6E\x6E\x61\x76\x20\x6C\x69","\x61\x64\x64\x43\x6C\x61\x73\x73","\x70\x61\x72\x65\x6E\x74","\x2E\x6D\x61\x69\x6E\x6E\x61\x76\x20\x61\x5B\x68\x72\x65\x66\x3D\x27\x23\x64\x61\x73\x68\x62\x6F\x61\x72\x64\x27\x5D","\x68\x69\x64\x65","\x2E\x6C\x6F\x61\x64\x69\x6E\x67\x2D\x74\x65\x78\x74","\x67\x65\x74","\x41\x75\x74\x68\x6F\x72\x69\x7A\x61\x74\x69\x6F\x6E","\x74\x6F\x6B\x65\x6E\x5F\x74\x79\x70\x65","\x20","\x61\x63\x63\x65\x73\x73\x5F\x74\x6F\x6B\x65\x6E","\x73\x65\x74\x52\x65\x71\x75\x65\x73\x74\x48\x65\x61\x64\x65\x72","\x6A\x73\x6F\x6E","\x61\x6A\x61\x78","\x63\x75\x72\x72\x65\x6E\x74\x55\x73\x65\x72","\x67\x65\x74\x49\x74\x65\x6D","\x70\x61\x72\x73\x65","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x70\x69\x2E\x62\x61\x63\x6B\x61\x6E\x64\x2E\x63\x6F\x6D\x2F\x31\x2F\x71\x75\x65\x72\x79\x2F\x64\x61\x74\x61\x2F\x67\x65\x74\x41\x6C\x6C\x52\x65\x66\x65\x72\x4F\x66\x66\x65\x72\x73\x3F\x70\x61\x72\x61\x6D\x65\x74\x65\x72\x73\x3D\x25\x37\x42\x25\x32\x32\x70\x61\x67\x65\x53\x69\x7A\x65\x25\x32\x32\x3A\x25\x32\x32\x35\x25\x32\x32\x2C\x25\x32\x32\x73\x74\x61\x72\x74\x46\x72\x6F\x6D\x25\x32\x32\x3A\x25\x32\x32\x30\x25\x32\x32\x2C\x25\x32\x32\x63\x69\x74\x79\x50\x61\x72\x61\x6D\x25\x32\x32\x3A\x25\x32\x32\x25\x32\x32\x2C\x25\x32\x32\x6B\x65\x79\x77\x6F\x72\x64\x25\x32\x32\x3A\x25\x32\x32\x25\x32\x32\x25\x37\x44","\x73\x74\x72\x69\x6E\x67\x69\x66\x79","\x6C\x65\x6E\x67\x74\x68","\x3C\x64\x69\x76\x20\x63\x6C\x61\x73\x73\x3D\x27\x73\x70\x61\x6E\x31\x32\x27\x3E\x3C\x64\x69\x76\x20\x63\x6C\x61\x73\x73\x3D\x27\x77\x69\x64\x67\x65\x74\x27\x3E\x3C\x64\x69\x76\x20\x63\x6C\x61\x73\x73\x3D\x27\x77\x69\x64\x67\x65\x74\x2D\x63\x6F\x6E\x74\x65\x6E\x74\x27\x20\x73\x74\x79\x6C\x65\x3D\x27\x70\x61\x64\x64\x69\x6E\x67\x3A\x32\x30\x70\x78\x20\x31\x35\x70\x78\x20\x32\x30\x70\x78\x20\x31\x35\x70\x78\x27\x3E\x3C\x70\x20\x73\x74\x79\x6C\x65\x3D\x27\x74\x65\x78\x74\x2D\x61\x6C\x69\x67\x6E\x3A\x20\x63\x65\x6E\x74\x65\x72\x3B\x20\x66\x6F\x6E\x74\x2D\x73\x74\x79\x6C\x65\x3A\x20\x69\x74\x61\x6C\x69\x63\x3B\x20\x66\x6F\x6E\x74\x2D\x73\x69\x7A\x65\x3A\x32\x30\x70\x78\x3B\x27\x3E\x54\x68\x65\x72\x65\x20\x61\x72\x65\x20\x6E\x6F\x20\x6F\x66\x66\x65\x72\x73\x20\x68\x65\x72\x65\x20\x3A\x28\x3C\x2F\x70\x3E\x3C\x2F\x64\x69\x76\x3E\x3C\x2F\x64\x69\x76\x3E\x3C\x2F\x64\x69\x76\x3E","\x61\x70\x70\x65\x6E\x64","\x23\x61\x6C\x6C\x4F\x66\x66\x65\x72\x73","\x2E\x66\x69\x6C\x74\x65\x72\x73","\x64\x61\x74\x65\x43\x72\x65\x61\x74\x65\x64","\x67\x65\x74\x48\x6F\x75\x72\x73","\x73\x65\x74\x48\x6F\x75\x72\x73","\x2F\x70\x6C\x61\x74\x66\x6F\x72\x6D\x2F\x69\x6E\x64\x65\x78\x2E\x68\x74\x6D\x6C\x23\x6F\x66\x66\x65\x72\x2D\x70\x61\x67\x65\x3A","\x69\x64","\x70\x72\x6F\x63\x65\x6E\x74","\x3C\x74\x64\x3E\x3C\x61\x20\x68\x72\x65\x66\x3D\x27","\x27\x3E\x2D\x3C\x2F\x61\x3E\x3C\x2F\x74\x64\x3E","\x3C\x74\x64\x3E\x3C\x62\x3E\x3C\x61\x20\x68\x72\x65\x66\x3D\x27","\x27\x3E","\x20\x52\x6F\x6E\x3C\x2F\x61\x3E\x3C\x2F\x62\x3E\x3C\x2F\x74\x64\x3E","\x3C\x74\x72\x3E\x3C\x74\x64\x20\x63\x6C\x61\x73\x73\x3D\x27\x68\x69\x64\x65\x2D\x74\x64\x2D\x73\x6D\x61\x6C\x6C\x65\x72\x27\x3E\x3C\x61\x20\x68\x72\x65\x66\x3D\x27","\x27\x3E\x3C\x69\x20\x63\x6C\x61\x73\x73\x3D\x27\x69\x63\x6F\x6E\x2D\x74\x69\x6D\x65\x27\x3E\x3C\x2F\x69\x3E\x26\x6E\x62\x73\x70\x3B","\x74\x69\x6D\x65\x61\x67\x6F","\x3C\x2F\x61\x3E\x3C\x2F\x74\x64\x3E\x3C\x74\x64\x3E\x3C\x61\x20\x68\x72\x65\x66\x3D\x27","\x74\x69\x74\x6C\x65","\x3C\x2F\x61\x3E\x3C\x2F\x74\x64\x3E\x3C\x74\x64\x20\x63\x6C\x61\x73\x73\x3D\x27\x68\x69\x64\x65\x2D\x74\x64\x27\x3E\x3C\x61\x20\x68\x72\x65\x66\x3D\x27","\x6A\x6F\x62\x54\x79\x70\x65","\x3C\x2F\x61\x3E\x3C\x2F\x74\x64\x3E","\x27\x3E\x3C\x69\x20\x63\x6C\x61\x73\x73\x3D\x27\x69\x63\x6F\x6E\x2D\x63\x68\x65\x76\x72\x6F\x6E\x2D\x72\x69\x67\x68\x74\x27\x3E\x3C\x2F\x69\x3E\x3C\x2F\x61\x3E\x3C\x2F\x74\x64\x3E\x3C\x2F\x74\x72\x3E","\x2E\x6C\x61\x74\x65\x73\x74\x2D\x6F\x66\x66\x65\x72\x73\x20\x74\x62\x6F\x64\x79","\x72\x65\x61\x64\x79"];$(document)[_0x266e[47]](function(){$(_0x266e[2])[_0x266e[1]](_0x266e[0]);$(_0x266e[5])[_0x266e[4]]()[_0x266e[3]](_0x266e[0]);$(_0x266e[7])[_0x266e[3]](_0x266e[6]);function _0x7bf5x1(_0x7bf5x2,_0x7bf5x3,_0x7bf5x4){$[_0x266e[15]]({url:_0x7bf5x2,async:false,type:_0x266e[8],beforeSend:function(_0x7bf5x5){_0x7bf5x5[_0x266e[13]](_0x266e[9],_0x7bf5x6[_0x266e[10]]+ _0x266e[11]+ _0x7bf5x6[_0x266e[12]])},data:{},dataType:_0x266e[14],cache:false,error:_0x7bf5x3,success:_0x7bf5x4})}var _0x7bf5x6=JSON[_0x266e[18]](localStorage[_0x266e[17]](_0x266e[16]));_0x7bf5x1(_0x266e[19],function(_0x7bf5x7){alert(JSON[_0x266e[20]](_0x7bf5x7))},function(_0x7bf5x8){myRecords= _0x7bf5x8});if(myRecords[_0x266e[21]]== 0){$(_0x266e[24])[_0x266e[23]](_0x266e[22]);$(_0x266e[25])[_0x266e[6]]()};for(var _0x7bf5x9 in myRecords){var _0x7bf5xa= new Date(myRecords[_0x7bf5x9][_0x266e[26]]);var _0x7bf5xb= new Date( new Date(_0x7bf5xa)[_0x266e[28]](_0x7bf5xa[_0x266e[27]]+ 2));var _0x7bf5xc=_0x266e[29]+ myRecords[_0x7bf5x9][_0x266e[30]];if(!myRecords[_0x7bf5x9][_0x266e[31]]){var _0x7bf5xd=_0x266e[32]+ _0x7bf5xc+ _0x266e[33]}else {var _0x7bf5xd=_0x266e[34]+ _0x7bf5xc+ _0x266e[35]+ myRecords[_0x7bf5x9][_0x266e[31]]+ _0x266e[36]};$(_0x266e[46])[_0x266e[23]](_0x266e[37]+ _0x7bf5xc+ _0x266e[38]+ $[_0x266e[39]](_0x7bf5xa)+ _0x266e[40]+ _0x7bf5xc+ _0x266e[35]+ myRecords[_0x7bf5x9][_0x266e[41]]+ _0x266e[42]+ _0x7bf5xc+ _0x266e[35]+ myRecords[_0x7bf5x9][_0x266e[43]]+ _0x266e[44]+ _0x7bf5xd+ _0x266e[32]+ _0x7bf5xc+ _0x266e[45])}})
 </script>
