--- a/platform/offer-page-edit.html
+++ b/platform/offer-page-edit.html
@@ -120,116 +120,5 @@
     </div>
 </div>
 <script>
-   if(window.location.href.indexOf("index.html#") == -1) {
-       window.location.replace('/platform/index.html');
-    }
-    $(document).ready(function(){
-        function ajaxGetCall(url, type, data, errorCallback, successCallback){
-            $.ajax({
-                url: url,
-                async: false,
-                type: type,
-                beforeSend: function (xhr) {
-                    xhr.setRequestHeader('Authorization', currentUser.token_type +' '+ currentUser.access_token);
-                },
-                data: data,
-                dataType: 'json',
-                cache: false,
-                error: errorCallback,
-                success: successCallback
-            });
-        }
-        var currentUser = JSON.parse(localStorage.getItem("currentUser"));
-        var oKey = JSON.parse(localStorage.getItem("currentKey"))[0].operationKey;
-        tinymce.init({  
-            selector: 'textarea',
-              height: 500,
-              menubar: false,
-              plugins: [
-                'advlist autolink lists link image charmap print preview anchor',
-                'searchreplace visualblocks code fullscreen',
-                'insertdatetime media table contextmenu paste code'
-              ],
-              toolbar: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link'
-        });
-        // console.log(tinymce.activeEditor.getContent())
-        var date = new Date();
-        var expDate = new Date(new Date(date).setMonth(date.getMonth()+1));
-        window.app.page("offer-page-edit", function(){
-            return function(params) {
-                ajaxGetCall('https://api.backand.com/1/objects/action/ReferOffer/'+parseInt(params)+'?name=allowEdit&parameters=%7B%22operationKey%22:%22'+oKey+'%22%7D', 'get', {},
-                function(error){alert(JSON.stringify(error))}, 
-                function(data){
-                    if(!data){
-                        window.location.replace("/401")
-                    }
-                    ajaxGetCall('https://api.backand.com/1/query/data/getReferOffer?parameters=%7B%22id%22:%22'+parseInt(params)+'%22%7D', 'get', {}, function(error){alert(JSON.stringify(error))}, 
-                    function(data){
-                        myRecord = data;
-
-                        if(typeof myRecord[0] == 'undefined'){
-                            window.location.replace('/404');
-                        }
-
-                        if(myRecord[0].deletedAt){
-                            window.location.replace('/404');
-                        }
-                        else{
-                            var date = new Date(myRecord[0].dateCreated);
-                            $("#titleField").val(myRecord[0].title);
-                            tinymce.activeEditor.setContent(myRecord[0].content);
-                            $("#company").val(myRecord[0].company);
-                            $("#company-website").val(myRecord[0].companyWebsite);
-                            $("#percent").val(myRecord[0].procent);
-                            $("#city").val(myRecord[0].city);
-                            $("#country").val(myRecord[0].country);
-                            $("#jobType").val(myRecord[0].jobType)
-                            $("#jobLevel").val(myRecord[0].jobLevel)
-                            $("#jobCategory").val(myRecord[0].jobCategory);
-                        }
-                    });
-                    $(".edit-offer-submit").on("click", function(){
-                        var newItem = JSON.stringify(
-                        {
-                            "title": $("#titleField").val(),
-                            "content": tinymce.activeEditor.getContent(),
-                            "Procent": parseInt($("#percent").val()),
-                            "company": $("#company").val(),
-                            "companyWebsite": $("#company-website").val(),
-                            "city": $("#city").val(),
-                            "country": $("#country").val(),
-                            "jobType": $("#jobType").val(),
-                            "jobLevel": $("#jobLevel").val(),
-                            "jobCategory": $("#jobCategory").val()
-                        });
-                        ajaxGetCall('https://api.backand.com:443/1/objects/ReferOffer/'+parseInt(params), 'put', newItem,
-                        function(error){
-                            var errorString = error.responseText;
-                            swal({
-                              title: "Error!",
-                              text: errorString,
-                              type: "error",
-                              confirmButtonText: "Close",
-                              allowOutsideClick: true,
-                              allowEscapeKey: true
-                            });
-                        },
-                        function(data){
-                            var dataString = "Object was updated!"
-                            swal({
-                              title: "Success!",
-                              text: dataString,
-                              type: "success",
-                              confirmButtonText: "Close",
-                              allowOutsideClick: true,
-                              allowEscapeKey: true
-                            });
-                            setTimeout(function() {window.location.replace("/platform/index.html#offer-page:"+parseInt(params));}, 3000);
-                        })     
-                    })
-                })
-            }
-        });
-        
-    });
+var _0xc122=["\x69\x6E\x64\x65\x78\x2E\x68\x74\x6D\x6C\x23","\x69\x6E\x64\x65\x78\x4F\x66","\x68\x72\x65\x66","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x2F\x70\x6C\x61\x74\x66\x6F\x72\x6D\x2F\x69\x6E\x64\x65\x78\x2E\x68\x74\x6D\x6C","\x72\x65\x70\x6C\x61\x63\x65","\x41\x75\x74\x68\x6F\x72\x69\x7A\x61\x74\x69\x6F\x6E","\x74\x6F\x6B\x65\x6E\x5F\x74\x79\x70\x65","\x20","\x61\x63\x63\x65\x73\x73\x5F\x74\x6F\x6B\x65\x6E","\x73\x65\x74\x52\x65\x71\x75\x65\x73\x74\x48\x65\x61\x64\x65\x72","\x6A\x73\x6F\x6E","\x61\x6A\x61\x78","\x63\x75\x72\x72\x65\x6E\x74\x55\x73\x65\x72","\x67\x65\x74\x49\x74\x65\x6D","\x70\x61\x72\x73\x65","\x6F\x70\x65\x72\x61\x74\x69\x6F\x6E\x4B\x65\x79","\x63\x75\x72\x72\x65\x6E\x74\x4B\x65\x79","\x74\x65\x78\x74\x61\x72\x65\x61","\x61\x64\x76\x6C\x69\x73\x74\x20\x61\x75\x74\x6F\x6C\x69\x6E\x6B\x20\x6C\x69\x73\x74\x73\x20\x6C\x69\x6E\x6B\x20\x69\x6D\x61\x67\x65\x20\x63\x68\x61\x72\x6D\x61\x70\x20\x70\x72\x69\x6E\x74\x20\x70\x72\x65\x76\x69\x65\x77\x20\x61\x6E\x63\x68\x6F\x72","\x73\x65\x61\x72\x63\x68\x72\x65\x70\x6C\x61\x63\x65\x20\x76\x69\x73\x75\x61\x6C\x62\x6C\x6F\x63\x6B\x73\x20\x63\x6F\x64\x65\x20\x66\x75\x6C\x6C\x73\x63\x72\x65\x65\x6E","\x69\x6E\x73\x65\x72\x74\x64\x61\x74\x65\x74\x69\x6D\x65\x20\x6D\x65\x64\x69\x61\x20\x74\x61\x62\x6C\x65\x20\x63\x6F\x6E\x74\x65\x78\x74\x6D\x65\x6E\x75\x20\x70\x61\x73\x74\x65\x20\x63\x6F\x64\x65","\x75\x6E\x64\x6F\x20\x72\x65\x64\x6F\x20\x7C\x20\x69\x6E\x73\x65\x72\x74\x20\x7C\x20\x73\x74\x79\x6C\x65\x73\x65\x6C\x65\x63\x74\x20\x7C\x20\x62\x6F\x6C\x64\x20\x69\x74\x61\x6C\x69\x63\x20\x7C\x20\x61\x6C\x69\x67\x6E\x6C\x65\x66\x74\x20\x61\x6C\x69\x67\x6E\x63\x65\x6E\x74\x65\x72\x20\x61\x6C\x69\x67\x6E\x72\x69\x67\x68\x74\x20\x61\x6C\x69\x67\x6E\x6A\x75\x73\x74\x69\x66\x79\x20\x7C\x20\x62\x75\x6C\x6C\x69\x73\x74\x20\x6E\x75\x6D\x6C\x69\x73\x74\x20\x6F\x75\x74\x64\x65\x6E\x74\x20\x69\x6E\x64\x65\x6E\x74\x20\x7C\x20\x6C\x69\x6E\x6B","\x69\x6E\x69\x74","\x67\x65\x74\x4D\x6F\x6E\x74\x68","\x73\x65\x74\x4D\x6F\x6E\x74\x68","\x6F\x66\x66\x65\x72\x2D\x70\x61\x67\x65\x2D\x65\x64\x69\x74","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x70\x69\x2E\x62\x61\x63\x6B\x61\x6E\x64\x2E\x63\x6F\x6D\x2F\x31\x2F\x6F\x62\x6A\x65\x63\x74\x73\x2F\x61\x63\x74\x69\x6F\x6E\x2F\x52\x65\x66\x65\x72\x4F\x66\x66\x65\x72\x2F","\x3F\x6E\x61\x6D\x65\x3D\x61\x6C\x6C\x6F\x77\x45\x64\x69\x74\x26\x70\x61\x72\x61\x6D\x65\x74\x65\x72\x73\x3D\x25\x37\x42\x25\x32\x32\x6F\x70\x65\x72\x61\x74\x69\x6F\x6E\x4B\x65\x79\x25\x32\x32\x3A\x25\x32\x32","\x25\x32\x32\x25\x37\x44","\x67\x65\x74","\x73\x74\x72\x69\x6E\x67\x69\x66\x79","\x2F\x34\x30\x31","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x70\x69\x2E\x62\x61\x63\x6B\x61\x6E\x64\x2E\x63\x6F\x6D\x2F\x31\x2F\x71\x75\x65\x72\x79\x2F\x64\x61\x74\x61\x2F\x67\x65\x74\x52\x65\x66\x65\x72\x4F\x66\x66\x65\x72\x3F\x70\x61\x72\x61\x6D\x65\x74\x65\x72\x73\x3D\x25\x37\x42\x25\x32\x32\x69\x64\x25\x32\x32\x3A\x25\x32\x32","\x75\x6E\x64\x65\x66\x69\x6E\x65\x64","\x2F\x34\x30\x34","\x64\x65\x6C\x65\x74\x65\x64\x41\x74","\x64\x61\x74\x65\x43\x72\x65\x61\x74\x65\x64","\x74\x69\x74\x6C\x65","\x76\x61\x6C","\x23\x74\x69\x74\x6C\x65\x46\x69\x65\x6C\x64","\x63\x6F\x6E\x74\x65\x6E\x74","\x73\x65\x74\x43\x6F\x6E\x74\x65\x6E\x74","\x61\x63\x74\x69\x76\x65\x45\x64\x69\x74\x6F\x72","\x63\x6F\x6D\x70\x61\x6E\x79","\x23\x63\x6F\x6D\x70\x61\x6E\x79","\x63\x6F\x6D\x70\x61\x6E\x79\x57\x65\x62\x73\x69\x74\x65","\x23\x63\x6F\x6D\x70\x61\x6E\x79\x2D\x77\x65\x62\x73\x69\x74\x65","\x70\x72\x6F\x63\x65\x6E\x74","\x23\x70\x65\x72\x63\x65\x6E\x74","\x63\x69\x74\x79","\x23\x63\x69\x74\x79","\x63\x6F\x75\x6E\x74\x72\x79","\x23\x63\x6F\x75\x6E\x74\x72\x79","\x6A\x6F\x62\x54\x79\x70\x65","\x23\x6A\x6F\x62\x54\x79\x70\x65","\x6A\x6F\x62\x4C\x65\x76\x65\x6C","\x23\x6A\x6F\x62\x4C\x65\x76\x65\x6C","\x6A\x6F\x62\x43\x61\x74\x65\x67\x6F\x72\x79","\x23\x6A\x6F\x62\x43\x61\x74\x65\x67\x6F\x72\x79","\x63\x6C\x69\x63\x6B","\x67\x65\x74\x43\x6F\x6E\x74\x65\x6E\x74","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x70\x69\x2E\x62\x61\x63\x6B\x61\x6E\x64\x2E\x63\x6F\x6D\x3A\x34\x34\x33\x2F\x31\x2F\x6F\x62\x6A\x65\x63\x74\x73\x2F\x52\x65\x66\x65\x72\x4F\x66\x66\x65\x72\x2F","\x70\x75\x74","\x72\x65\x73\x70\x6F\x6E\x73\x65\x54\x65\x78\x74","\x45\x72\x72\x6F\x72\x21","\x65\x72\x72\x6F\x72","\x43\x6C\x6F\x73\x65","\x4F\x62\x6A\x65\x63\x74\x20\x77\x61\x73\x20\x75\x70\x64\x61\x74\x65\x64\x21","\x53\x75\x63\x63\x65\x73\x73\x21","\x73\x75\x63\x63\x65\x73\x73","\x2F\x70\x6C\x61\x74\x66\x6F\x72\x6D\x2F\x69\x6E\x64\x65\x78\x2E\x68\x74\x6D\x6C\x23\x6F\x66\x66\x65\x72\x2D\x70\x61\x67\x65\x3A","\x6F\x6E","\x2E\x65\x64\x69\x74\x2D\x6F\x66\x66\x65\x72\x2D\x73\x75\x62\x6D\x69\x74","\x70\x61\x67\x65","\x61\x70\x70","\x72\x65\x61\x64\x79"];if(window[_0xc122[3]][_0xc122[2]][_0xc122[1]](_0xc122[0])==  -1){window[_0xc122[3]][_0xc122[5]](_0xc122[4])};$(document)[_0xc122[76]](function(){function _0x4970x1(_0x4970x2,_0x4970x3,_0x4970x4,_0x4970x5,_0x4970x6){$[_0xc122[12]]({url:_0x4970x2,async:false,type:_0x4970x3,beforeSend:function(_0x4970x7){_0x4970x7[_0xc122[10]](_0xc122[6],_0x4970x8[_0xc122[7]]+ _0xc122[8]+ _0x4970x8[_0xc122[9]])},data:_0x4970x4,dataType:_0xc122[11],cache:false,error:_0x4970x5,success:_0x4970x6})}var _0x4970x8=JSON[_0xc122[15]](localStorage[_0xc122[14]](_0xc122[13]));var _0x4970x9=JSON[_0xc122[15]](localStorage[_0xc122[14]](_0xc122[17]))[0][_0xc122[16]];tinymce[_0xc122[23]]({selector:_0xc122[18],height:500,menubar:false,plugins:[_0xc122[19],_0xc122[20],_0xc122[21]],toolbar:_0xc122[22]});var _0x4970xa= new Date();var _0x4970xb= new Date( new Date(_0x4970xa)[_0xc122[25]](_0x4970xa[_0xc122[24]]()+ 1));window[_0xc122[75]][_0xc122[74]](_0xc122[26],function(){return function(_0x4970xc){_0x4970x1(_0xc122[27]+ parseInt(_0x4970xc)+ _0xc122[28]+ _0x4970x9+ _0xc122[29],_0xc122[30],{},function(_0x4970xd){alert(JSON[_0xc122[31]](_0x4970xd))},function(_0x4970x4){if(!_0x4970x4){window[_0xc122[3]][_0xc122[5]](_0xc122[32])};_0x4970x1(_0xc122[33]+ parseInt(_0x4970xc)+ _0xc122[29],_0xc122[30],{},function(_0x4970xd){alert(JSON[_0xc122[31]](_0x4970xd))},function(_0x4970x4){myRecord= _0x4970x4;if( typeof myRecord[0]== _0xc122[34]){window[_0xc122[3]][_0xc122[5]](_0xc122[35])};if(myRecord[0][_0xc122[36]]){window[_0xc122[3]][_0xc122[5]](_0xc122[35])}else {var _0x4970xa= new Date(myRecord[0][_0xc122[37]]);$(_0xc122[40])[_0xc122[39]](myRecord[0][_0xc122[38]]);tinymce[_0xc122[43]][_0xc122[42]](myRecord[0][_0xc122[41]]);$(_0xc122[45])[_0xc122[39]](myRecord[0][_0xc122[44]]);$(_0xc122[47])[_0xc122[39]](myRecord[0][_0xc122[46]]);$(_0xc122[49])[_0xc122[39]](myRecord[0][_0xc122[48]]);$(_0xc122[51])[_0xc122[39]](myRecord[0][_0xc122[50]]);$(_0xc122[53])[_0xc122[39]](myRecord[0][_0xc122[52]]);$(_0xc122[55])[_0xc122[39]](myRecord[0][_0xc122[54]]);$(_0xc122[57])[_0xc122[39]](myRecord[0][_0xc122[56]]);$(_0xc122[59])[_0xc122[39]](myRecord[0][_0xc122[58]])}});$(_0xc122[73])[_0xc122[72]](_0xc122[60],function(){var _0x4970xe=JSON[_0xc122[31]]({"\x74\x69\x74\x6C\x65":$(_0xc122[40])[_0xc122[39]](),"\x63\x6F\x6E\x74\x65\x6E\x74":tinymce[_0xc122[43]][_0xc122[61]](),"\x50\x72\x6F\x63\x65\x6E\x74":parseInt($(_0xc122[49])[_0xc122[39]]()),"\x63\x6F\x6D\x70\x61\x6E\x79":$(_0xc122[45])[_0xc122[39]](),"\x63\x6F\x6D\x70\x61\x6E\x79\x57\x65\x62\x73\x69\x74\x65":$(_0xc122[47])[_0xc122[39]](),"\x63\x69\x74\x79":$(_0xc122[51])[_0xc122[39]](),"\x63\x6F\x75\x6E\x74\x72\x79":$(_0xc122[53])[_0xc122[39]](),"\x6A\x6F\x62\x54\x79\x70\x65":$(_0xc122[55])[_0xc122[39]](),"\x6A\x6F\x62\x4C\x65\x76\x65\x6C":$(_0xc122[57])[_0xc122[39]](),"\x6A\x6F\x62\x43\x61\x74\x65\x67\x6F\x72\x79":$(_0xc122[59])[_0xc122[39]]()});_0x4970x1(_0xc122[62]+ parseInt(_0x4970xc),_0xc122[63],_0x4970xe,function(_0x4970xd){var _0x4970xf=_0x4970xd[_0xc122[64]];swal({title:_0xc122[65],text:_0x4970xf,type:_0xc122[66],confirmButtonText:_0xc122[67],allowOutsideClick:true,allowEscapeKey:true})},function(_0x4970x4){var _0x4970x10=_0xc122[68];swal({title:_0xc122[69],text:_0x4970x10,type:_0xc122[70],confirmButtonText:_0xc122[67],allowOutsideClick:true,allowEscapeKey:true});setTimeout(function(){window[_0xc122[3]][_0xc122[5]](_0xc122[71]+ parseInt(_0x4970xc))},3000)})})})}})})
 </script>
