--- a/platform/public.html
+++ b/platform/public.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Platform | ReferralShip</title>
+<title>ReferralShip</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
@@ -66,44 +66,7 @@
 <script src="js/jquery-1.7.2.min.js"></script> 
 <script src="http://timeago.yarp.com/jquery.timeago.js"></script>
 <script>
-    $(document).ready(function(){
-        function ajaxGetCall(url, errorCallback, successCallback){
-            $.ajax({
-                url: url,
-                async: false,
-                type: 'get',
-                beforeSend: function (xhr) {
-                    xhr.setRequestHeader('AnonymousToken', '005b72b3-9f1f-452e-8a61-3b9666c33caf');
-                },
-                data: {},
-                dataType: 'json',
-                cache: false,
-                error: errorCallback,
-                success: successCallback
-            });
-        }
-        ajaxGetCall('https://api.backand.com/1/query/data/getReferOffer?parameters=%7B%22id%22:%22'+window.location.hash.split(':')[1]+'%22%7D', function(error){alert(JSON.stringify(error))}, 
-                function(data){
-                    myRecord = data;
-                    expireDate = myRecord[0].expiresAt;
-                    if(typeof myRecord[0] == 'undefined'){
-                        window.location.replace('/404');
-                    }
-                    
-                    if(myRecord[0].deletedAt){
-                        window.location.replace('/404');
-                    }
-                    else{
-                        var date = new Date(myRecord[0].dateCreated);
-                        if(!myRecord[0].procent)
-                            var procentTag = "";
-                        else
-                            var procentTag = "<span class='tag orange'>"+myRecord[0].procent+" Ron</span>";
-                        
-                        $("#offer").append("<div class='span12'><div class='offer-page-header'><span class='timeago offer-info-header'><i class='icon-time'></i>&nbsp;"+$.timeago(date)+"</span><span class='timeago offer-info-header'><i class='icon-map-marker'></i>&nbsp;"+myRecord[0].city+", "+myRecord[0].country+"</span><span class='timeago offer-info-header'><i class='icon-building'></i>&nbsp;"+myRecord[0].company+"</span></div><h1 style='margin-top:15px; text-align:center'>"+myRecord[0].title+"</h1><div class='job-facts'>"+procentTag+"<span class='tag'>"+myRecord[0].jobType+"</span><span class='tag'>"+myRecord[0].jobLevel+"</span><span class='tag'>"+myRecord[0].jobCategory+"</span></div><p>"+myRecord[0].content+"</p></div><br>Interested in this offer or you want to look for other?&nbsp;&nbsp;&nbsp;<a href='/' class='btn btn-warning'>Create account or login</a>");
-                    }
-                });
-    });
+var _0x33c8=["\x67\x65\x74","\x41\x6E\x6F\x6E\x79\x6D\x6F\x75\x73\x54\x6F\x6B\x65\x6E","\x30\x30\x35\x62\x37\x32\x62\x33\x2D\x39\x66\x31\x66\x2D\x34\x35\x32\x65\x2D\x38\x61\x36\x31\x2D\x33\x62\x39\x36\x36\x36\x63\x33\x33\x63\x61\x66","\x73\x65\x74\x52\x65\x71\x75\x65\x73\x74\x48\x65\x61\x64\x65\x72","\x6A\x73\x6F\x6E","\x61\x6A\x61\x78","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x70\x69\x2E\x62\x61\x63\x6B\x61\x6E\x64\x2E\x63\x6F\x6D\x2F\x31\x2F\x71\x75\x65\x72\x79\x2F\x64\x61\x74\x61\x2F\x67\x65\x74\x52\x65\x66\x65\x72\x4F\x66\x66\x65\x72\x3F\x70\x61\x72\x61\x6D\x65\x74\x65\x72\x73\x3D\x25\x37\x42\x25\x32\x32\x69\x64\x25\x32\x32\x3A\x25\x32\x32","\x3A","\x73\x70\x6C\x69\x74","\x68\x61\x73\x68","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x25\x32\x32\x25\x37\x44","\x73\x74\x72\x69\x6E\x67\x69\x66\x79","\x65\x78\x70\x69\x72\x65\x73\x41\x74","\x75\x6E\x64\x65\x66\x69\x6E\x65\x64","\x2F\x34\x30\x34","\x72\x65\x70\x6C\x61\x63\x65","\x64\x65\x6C\x65\x74\x65\x64\x41\x74","\x64\x61\x74\x65\x43\x72\x65\x61\x74\x65\x64","\x70\x72\x6F\x63\x65\x6E\x74","","\x3C\x73\x70\x61\x6E\x20\x63\x6C\x61\x73\x73\x3D\x27\x74\x61\x67\x20\x6F\x72\x61\x6E\x67\x65\x27\x3E","\x20\x52\x6F\x6E\x3C\x2F\x73\x70\x61\x6E\x3E","\x3C\x64\x69\x76\x20\x63\x6C\x61\x73\x73\x3D\x27\x73\x70\x61\x6E\x31\x32\x27\x3E\x3C\x64\x69\x76\x20\x63\x6C\x61\x73\x73\x3D\x27\x6F\x66\x66\x65\x72\x2D\x70\x61\x67\x65\x2D\x68\x65\x61\x64\x65\x72\x27\x3E\x3C\x73\x70\x61\x6E\x20\x63\x6C\x61\x73\x73\x3D\x27\x74\x69\x6D\x65\x61\x67\x6F\x20\x6F\x66\x66\x65\x72\x2D\x69\x6E\x66\x6F\x2D\x68\x65\x61\x64\x65\x72\x27\x3E\x3C\x69\x20\x63\x6C\x61\x73\x73\x3D\x27\x69\x63\x6F\x6E\x2D\x74\x69\x6D\x65\x27\x3E\x3C\x2F\x69\x3E\x26\x6E\x62\x73\x70\x3B","\x74\x69\x6D\x65\x61\x67\x6F","\x3C\x2F\x73\x70\x61\x6E\x3E\x3C\x73\x70\x61\x6E\x20\x63\x6C\x61\x73\x73\x3D\x27\x74\x69\x6D\x65\x61\x67\x6F\x20\x6F\x66\x66\x65\x72\x2D\x69\x6E\x66\x6F\x2D\x68\x65\x61\x64\x65\x72\x27\x3E\x3C\x69\x20\x63\x6C\x61\x73\x73\x3D\x27\x69\x63\x6F\x6E\x2D\x6D\x61\x70\x2D\x6D\x61\x72\x6B\x65\x72\x27\x3E\x3C\x2F\x69\x3E\x26\x6E\x62\x73\x70\x3B","\x63\x69\x74\x79","\x2C\x20","\x63\x6F\x75\x6E\x74\x72\x79","\x3C\x2F\x73\x70\x61\x6E\x3E\x3C\x73\x70\x61\x6E\x20\x63\x6C\x61\x73\x73\x3D\x27\x74\x69\x6D\x65\x61\x67\x6F\x20\x6F\x66\x66\x65\x72\x2D\x69\x6E\x66\x6F\x2D\x68\x65\x61\x64\x65\x72\x27\x3E\x3C\x69\x20\x63\x6C\x61\x73\x73\x3D\x27\x69\x63\x6F\x6E\x2D\x62\x75\x69\x6C\x64\x69\x6E\x67\x27\x3E\x3C\x2F\x69\x3E\x26\x6E\x62\x73\x70\x3B","\x63\x6F\x6D\x70\x61\x6E\x79","\x3C\x2F\x73\x70\x61\x6E\x3E\x3C\x2F\x64\x69\x76\x3E\x3C\x68\x31\x20\x73\x74\x79\x6C\x65\x3D\x27\x6D\x61\x72\x67\x69\x6E\x2D\x74\x6F\x70\x3A\x31\x35\x70\x78\x3B\x20\x74\x65\x78\x74\x2D\x61\x6C\x69\x67\x6E\x3A\x63\x65\x6E\x74\x65\x72\x27\x3E","\x74\x69\x74\x6C\x65","\x3C\x2F\x68\x31\x3E\x3C\x64\x69\x76\x20\x63\x6C\x61\x73\x73\x3D\x27\x6A\x6F\x62\x2D\x66\x61\x63\x74\x73\x27\x3E","\x3C\x73\x70\x61\x6E\x20\x63\x6C\x61\x73\x73\x3D\x27\x74\x61\x67\x27\x3E","\x6A\x6F\x62\x54\x79\x70\x65","\x3C\x2F\x73\x70\x61\x6E\x3E\x3C\x73\x70\x61\x6E\x20\x63\x6C\x61\x73\x73\x3D\x27\x74\x61\x67\x27\x3E","\x6A\x6F\x62\x4C\x65\x76\x65\x6C","\x6A\x6F\x62\x43\x61\x74\x65\x67\x6F\x72\x79","\x3C\x2F\x73\x70\x61\x6E\x3E\x3C\x2F\x64\x69\x76\x3E\x3C\x70\x3E","\x63\x6F\x6E\x74\x65\x6E\x74","\x3C\x2F\x70\x3E\x3C\x2F\x64\x69\x76\x3E\x3C\x62\x72\x3E\x49\x6E\x74\x65\x72\x65\x73\x74\x65\x64\x20\x69\x6E\x20\x74\x68\x69\x73\x20\x6F\x66\x66\x65\x72\x20\x6F\x72\x20\x79\x6F\x75\x20\x77\x61\x6E\x74\x20\x74\x6F\x20\x6C\x6F\x6F\x6B\x20\x66\x6F\x72\x20\x6F\x74\x68\x65\x72\x3F\x26\x6E\x62\x73\x70\x3B\x26\x6E\x62\x73\x70\x3B\x26\x6E\x62\x73\x70\x3B\x3C\x61\x20\x68\x72\x65\x66\x3D\x27\x2F\x27\x20\x63\x6C\x61\x73\x73\x3D\x27\x62\x74\x6E\x20\x62\x74\x6E\x2D\x77\x61\x72\x6E\x69\x6E\x67\x27\x3E\x43\x72\x65\x61\x74\x65\x20\x61\x63\x63\x6F\x75\x6E\x74\x20\x6F\x72\x20\x6C\x6F\x67\x69\x6E\x3C\x2F\x61\x3E","\x61\x70\x70\x65\x6E\x64","\x23\x6F\x66\x66\x65\x72","\x72\x65\x61\x64\x79"];$(document)[_0x33c8[44]](function(){function _0x96d4x1(_0x96d4x2,_0x96d4x3,_0x96d4x4){$[_0x33c8[5]]({url:_0x96d4x2,async:false,type:_0x33c8[0],beforeSend:function(_0x96d4x5){_0x96d4x5[_0x33c8[3]](_0x33c8[1],_0x33c8[2])},data:{},dataType:_0x33c8[4],cache:false,error:_0x96d4x3,success:_0x96d4x4})}_0x96d4x1(_0x33c8[6]+ window[_0x33c8[10]][_0x33c8[9]][_0x33c8[8]](_0x33c8[7])[1]+ _0x33c8[11],function(_0x96d4x6){alert(JSON[_0x33c8[12]](_0x96d4x6))},function(_0x96d4x7){myRecord= _0x96d4x7;expireDate= myRecord[0][_0x33c8[13]];if( typeof myRecord[0]== _0x33c8[14]){window[_0x33c8[10]][_0x33c8[16]](_0x33c8[15])};if(myRecord[0][_0x33c8[17]]){window[_0x33c8[10]][_0x33c8[16]](_0x33c8[15])}else {var _0x96d4x8= new Date(myRecord[0][_0x33c8[18]]);if(!myRecord[0][_0x33c8[19]]){var _0x96d4x9=_0x33c8[20]}else {var _0x96d4x9=_0x33c8[21]+ myRecord[0][_0x33c8[19]]+ _0x33c8[22]};$(_0x33c8[43])[_0x33c8[42]](_0x33c8[23]+ $[_0x33c8[24]](_0x96d4x8)+ _0x33c8[25]+ myRecord[0][_0x33c8[26]]+ _0x33c8[27]+ myRecord[0][_0x33c8[28]]+ _0x33c8[29]+ myRecord[0][_0x33c8[30]]+ _0x33c8[31]+ myRecord[0][_0x33c8[32]]+ _0x33c8[33]+ _0x96d4x9+ _0x33c8[34]+ myRecord[0][_0x33c8[35]]+ _0x33c8[36]+ myRecord[0][_0x33c8[37]]+ _0x33c8[36]+ myRecord[0][_0x33c8[38]]+ _0x33c8[39]+ myRecord[0][_0x33c8[40]]+ _0x33c8[41])}})})
 </script>
 </body>
 </html>
