--- a/reset.html
+++ b/reset.html
@@ -42,51 +42,7 @@
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="js/sweetalert.min.js"></script>
   <script>
-    $(document).ready(function(){
-        var token = window.location.search.split("=")[1];
-        $("#reset_button").click(function(){
-            if($("#reset_password").val() === $("#repeat_reset_password").val()){
-                var resetData = JSON.stringify({
-                  "resetToken": token,
-                  "newPassword": $('#reset_password').val()
-                });
-                var url = 'https://api.backand.com:8080/1/user/resetPassword';
-                $.ajax({
-                    url: url,
-                    async: false,
-                    type: 'post',
-                    data: resetData,
-                    success: function(data){
-                        swal("Success!", "Your password was reseted. You will be redirected to login page in 3 seconds.", "success");
-                        setTimeout(function() {window.location.replace('/');}, 3000);
-                    },
-                    error: function(err){
-                        var errorString = err.responseText;
-                        if(typeof err.responseJSON === 'object')
-                            errorString = error.responseJSON.error_description;
-                        swal({
-                          title: "Error!",
-                          text: errorString,
-                          type: "error",
-                          confirmButtonText: "Close",
-                          allowOutsideClick: true,
-                          allowEscapeKey: true
-                        });
-                    }
-                });
-            }
-            else{
-                swal({
-                  title: "Error!",
-                  text: "The passwords do not match",
-                  type: "error",
-                  confirmButtonText: "Close",
-                  allowOutsideClick: true,
-                  allowEscapeKey: true
-                });
-            }
-        });
-    });  
+    var _0xc628=["\x3D","\x73\x70\x6C\x69\x74","\x73\x65\x61\x72\x63\x68","\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x76\x61\x6C","\x23\x72\x65\x73\x65\x74\x5F\x70\x61\x73\x73\x77\x6F\x72\x64","\x23\x72\x65\x70\x65\x61\x74\x5F\x72\x65\x73\x65\x74\x5F\x70\x61\x73\x73\x77\x6F\x72\x64","\x73\x74\x72\x69\x6E\x67\x69\x66\x79","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x70\x69\x2E\x62\x61\x63\x6B\x61\x6E\x64\x2E\x63\x6F\x6D\x3A\x38\x30\x38\x30\x2F\x31\x2F\x75\x73\x65\x72\x2F\x72\x65\x73\x65\x74\x50\x61\x73\x73\x77\x6F\x72\x64","\x70\x6F\x73\x74","\x53\x75\x63\x63\x65\x73\x73\x21","\x59\x6F\x75\x72\x20\x70\x61\x73\x73\x77\x6F\x72\x64\x20\x77\x61\x73\x20\x72\x65\x73\x65\x74\x65\x64\x2E\x20\x59\x6F\x75\x20\x77\x69\x6C\x6C\x20\x62\x65\x20\x72\x65\x64\x69\x72\x65\x63\x74\x65\x64\x20\x74\x6F\x20\x6C\x6F\x67\x69\x6E\x20\x70\x61\x67\x65\x20\x69\x6E\x20\x33\x20\x73\x65\x63\x6F\x6E\x64\x73\x2E","\x73\x75\x63\x63\x65\x73\x73","\x2F","\x72\x65\x70\x6C\x61\x63\x65","\x72\x65\x73\x70\x6F\x6E\x73\x65\x54\x65\x78\x74","\x72\x65\x73\x70\x6F\x6E\x73\x65\x4A\x53\x4F\x4E","\x6F\x62\x6A\x65\x63\x74","\x65\x72\x72\x6F\x72\x5F\x64\x65\x73\x63\x72\x69\x70\x74\x69\x6F\x6E","\x45\x72\x72\x6F\x72\x21","\x65\x72\x72\x6F\x72","\x43\x6C\x6F\x73\x65","\x61\x6A\x61\x78","\x54\x68\x65\x20\x70\x61\x73\x73\x77\x6F\x72\x64\x73\x20\x64\x6F\x20\x6E\x6F\x74\x20\x6D\x61\x74\x63\x68","\x63\x6C\x69\x63\x6B","\x23\x72\x65\x73\x65\x74\x5F\x62\x75\x74\x74\x6F\x6E","\x72\x65\x61\x64\x79"];$(document)[_0xc628[26]](function(){var _0xb64bx1=window[_0xc628[3]][_0xc628[2]][_0xc628[1]](_0xc628[0])[1];$(_0xc628[25])[_0xc628[24]](function(){if($(_0xc628[5])[_0xc628[4]]()=== $(_0xc628[6])[_0xc628[4]]()){var _0xb64bx2=JSON[_0xc628[7]]({"\x72\x65\x73\x65\x74\x54\x6F\x6B\x65\x6E":_0xb64bx1,"\x6E\x65\x77\x50\x61\x73\x73\x77\x6F\x72\x64":$(_0xc628[5])[_0xc628[4]]()});var _0xb64bx3=_0xc628[8];$[_0xc628[22]]({url:_0xb64bx3,async:false,type:_0xc628[9],data:_0xb64bx2,success:function(_0xb64bx4){swal(_0xc628[10],_0xc628[11],_0xc628[12]);setTimeout(function(){window[_0xc628[3]][_0xc628[14]](_0xc628[13])},3000)},error:function(_0xb64bx5){var _0xb64bx6=_0xb64bx5[_0xc628[15]];if( typeof _0xb64bx5[_0xc628[16]]=== _0xc628[17]){_0xb64bx6= error[_0xc628[16]][_0xc628[18]]};swal({title:_0xc628[19],text:_0xb64bx6,type:_0xc628[20],confirmButtonText:_0xc628[21],allowOutsideClick:true,allowEscapeKey:true})}})}else {swal({title:_0xc628[19],text:_0xc628[23],type:_0xc628[20],confirmButtonText:_0xc628[21],allowOutsideClick:true,allowEscapeKey:true})}})})
   </script>
 
 </body>
