--- a/index.html
+++ b/index.html
@@ -1,113 +1,93 @@
-<!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>ReferralShip</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-    <meta name="description" content="ReferralShip represents a platform where any individual can post job offers from their current company and job seekers can apply through them. Candidates gain more trust and the chances to have an interview increase significantly, while posters can earn money from their employee referral program.">
-  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-  <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans'>
+<!DOCTYPE HTML>
+<!--
+	Introspect by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
+<html>
+	<head>
+		<title>ReferralShip</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="splash/assets/css/main.css" />
+        <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+	</head>
+	<body>
 
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/sweetalert.css">
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a href="/" class="logo"><span style="color:white!important">Referral</span>Ship</a>
+                    <nav id="nav" style="display: inline-block;padding-right:10px;">
+				    <a href="/login.html" style="position: relative;bottom: 5px;">Login</a><a href="http://facebook.com/ReferralShip" target="_blank" style="padding-left:0.5em;"><i class="fa fa-facebook-square" style="font-size:32px;"></i></a>
+				</nav>
+				</div>
+			</header>
 
-  
-</head>
+		<!-- Banner -->
+			<section id="banner">
+				<div class="inner">
+					<h1><span>Share job offers and earn money.<br> Search jobs, get hired and receive bonus reward</span></h1>
+					<ul class="actions">
+						<li><a href="/login.html" class="button alt">Get Started</a></li>
+					</ul>
+				</div>
+			</section>
 
-<body>
-  <div class="cont">
-  <div class="demo" style="">
-    <div class="login">
-      <div class="logo">
-        <h1 style="color: #fff">Referral<span style="color: #f49542">Ship</span></h1>  
-      </div>
-      <div class="login__form">
-        <div class="login__row">
-          <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
-            <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
-          </svg>
-          <input type="text" class="login__input name" id="login_username" placeholder="Username" onkeyup = "if (event.keyCode == 13) document.getElementById('login_button').click()"    />
-        </div>
-        <div class="login__row">
-          <svg class="login__icon pass svg-icon" viewBox="0 0 20 20">
-            <path d="M0,20 20,20 20,8 0,8z M10,13 10,16z M4,8 a6,8 0 0,1 12,0" />
-          </svg>
-          <input type="password" class="login__input pass" id="login_password" placeholder="Password" onkeyup = "if (event.keyCode == 13) document.getElementById('login_button').click()"    />
-        </div>
-        <div class="login_error hide">
-              <p style="color:red">Something went wrong. Please try again!</p>
-        </div>
-        <button type="button" class="login__submit" id="login_button">Sign in</button>
-        <p class="login__signup">Forgotten password? &nbsp;<a id="reset">Reset here</a>
-        <p class="login__signup">Don't have an account? &nbsp;<a id="signup">Sign up</a></p>
-      </div>
-      <div class="signup_form hide">
-        <div class="login__row">
-          <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
-            <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
-          </svg>
-          <input type="text" class="login__input name" placeholder="Email" id="signup_email" onkeyup = "if (event.keyCode == 13) document.getElementById('submit_button').click()"    />
-        </div>
-        <div class="login__row">
-          <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
-            <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
-          </svg>
-          <input type="text" class="login__input name" placeholder="First name" id="signup_firstname" onkeyup = "if (event.keyCode == 13) document.getElementById('submit_button').click()"/>
-        </div>
-        <div class="login__row">
-          <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
-            <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
-          </svg>
-          <input type="text" class="login__input name" placeholder="Last name" id="signup_lastname" onkeyup = "if (event.keyCode == 13) document.getElementById('submit_button').click()"/>
-        </div>
-        <div class="login__row">
-          <svg class="login__icon pass svg-icon" viewBox="0 0 20 20">
-            <path d="M0,20 20,20 20,8 0,8z M10,13 10,16z M4,8 a6,8 0 0,1 12,0" />
-          </svg>
-          <input type="password" class="login__input pass" placeholder="Password" id="signup_password" onkeyup = "if (event.keyCode == 13) document.getElementById('submit_button').click()"/>
-        </div>
-        <div class="login__row">
-          <svg class="login__icon pass svg-icon" viewBox="0 0 20 20">
-            <path d="M0,20 20,20 20,8 0,8z M10,13 10,16z M4,8 a6,8 0 0,1 12,0" />
-          </svg>
-          <input type="password" class="login__input pass" placeholder="Repeat Password" id="signup_repeatpass" onkeyup = "if (event.keyCode == 13) document.getElementById('submit_button').click()"/>
-        </div>
-        <button type="button" class="login__submit" id="submit_button">Sign up</button>
-        <p class="login__signup">Already have an account? &nbsp;<a id="login">Login Here</a></p>
+		<!-- One -->
+			<section id="one">
+				<div class="inner">
+					<header>
+						<h2 style="text-align: center">Search.&nbsp; Post.&nbsp; Win</h2>
+					</header>
+					<p style="text-align: center">With our new platform, any individual can post job offers from their current company and job seekers can apply through them. Candidates gain more trust and the chances to have an interview increase significantly, while posters can earn money from their employee referral program.</p>
+				</div>
+			</section>
 
-      </div>
-      <div class="reset_password_form hide">
-        <div class="login__row">
-          <svg class="login__icon name svg-icon" viewBox="0 0 20 20">
-            <path d="M0,20 a10,8 0 0,1 20,0z M10,0 a4,4 0 0,1 0,8 a4,4 0 0,1 0,-8" />
-          </svg>
-          <input type="text" class="login__input name" placeholder="Email" id="reset_password_email" onkeyup = "if (event.keyCode == 13) document.getElementById('reset_button').click()"/>
-        </div>
-        <button type="button" class="login__submit" id="reset_button">Request password reset</button>
-      </div>
-    </div>
-    <div class="app">
-    </div>
-  </div>
-</div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src="js/flogin.js"></script>
-  <script type='text/javascript'>
-//    $(function() {
-//      $('#login').facebook_login({
-//        appId: '1842768289336615',
-//        endpoint: '/sessions/new',
-//        onSuccess: function(data) {}, 
-//        onError: function(data) {},
-//        permissions: 'public_profile, email, user_location'
-//      });
-//    });
-</script>
-  <script src="js/sweetalert.min.js"></script>
-  <script src="js/index.js"></script>
-  <script src="js/backand.js"></script>
-  <script src="js/jquery.backand.js"></script>
-  <script src="js/custom.js"></script>
-
-</body>
+		<!-- Two -->
+			<section id="two">
+				<div class="inner">
+					<article>
+						<div class="content">
+							<header>
+								<h3><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Job Poster</h3>
+							</header>
+							<p>Let's say your company has an open position and you find out they also offer as reward a considerable sum of money. Now is the perfect time to get in touch with people that might fit the job description using our platform.</p>
+						</div>
+					</article>
+					<article class="alt">
+						<div class="content">
+							<header>
+								<h3><i class="fa fa-users" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Job Seeker</h3>
+							</header>
+							<p>For candidates, the main advantage represents the fact that employers tend to believe they’re better workers, because current employees should know who’s likely to be a good fit. As a result, they get faster reviews and responses, and vastly better hire rates.</p>
+						</div>
+					</article>
+				</div>
+			</section>
+            <section id="three">
+                <div class="three-opacity">
+                    <div class="inner">
+                        <header>
+                            <h3>How does it work</h3>
+                        </header>
+                        <p><i class="fa fa-check-square-o" aria-hidden="true"></i>Employees post the Job offers</p>
+                        <p><i class="fa fa-check-square-o" aria-hidden="true"></i>Job seekers contact the employee and sends resume</p>
+                        <p><i class="fa fa-check-square-o" aria-hidden="true"></i>Employees refer candidates to HR through their Employee Referral Program</p>
+                        <p><i class="fa fa-check-square-o" aria-hidden="true"></i>Candidates are contacted by HR</p>
+                        <p><i class="fa fa-check-square-o" aria-hidden="true"></i>If selected, the poster gets the bonus from his company and optionally awards the candidate with a share from the reward</p>
+                    </div>
+                </div>
+            </section>
+		<!-- Footer -->
+			<section id="footer">
+				<div class="inner">
+                    <p>© 2017 ReferralShip - All rights reserved. </p>
+				</div>
+			</section>
+            <script>
+            if(localStorage.getItem("currentUser")){
+                window.location.replace("/platform/index.html");
+    }       </script>
+	</body>
 </html>
